--- a/.github/workflows/terraform-workflow.yaml
+++ b/.github/workflows/terraform-workflow.yaml
@@ -60,7 +60,7 @@ jobs:
       
       - name: Terraform apply
         id: apply
-        if: github-ref == 'refs/heads/main' && github.event.name == 'push'
+        if: github.ref == 'refs/heads/main' && github.event_ßname == 'push'
         run: terraform apply -auto-approve -input=fals -parallelism=1 planfile
 
       - name: Configure AWS credentials
@@ -79,7 +79,7 @@ jobs:
         if: steps.apply.outcome == 'success' && steps.kubeconfig.outcome == 'success'
         run: kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.1.3/deploy/static/provider/aws/deploy.yaml
       
-      
+
   
       
 
