typo correction for github.event_name

--- a/.github/workflows/terraform-workflow.yaml
+++ b/.github/workflows/terraform-workflow.yaml
@@ -60,7 +60,7 @@ jobs:
       
       - name: Terraform apply
         id: apply
-        if: github.ref == 'refs/heads/main' && github.event_ßname == 'push'
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: terraform apply -auto-approve -input=fals -parallelism=1 planfile
 
       - name: Configure AWS credentials
