--- a/.github/workflows/terraform-workflow.yaml
+++ b/.github/workflows/terraform-workflow.yaml
@@ -39,7 +39,7 @@ jobs:
       
       - name: Initialise Terraform
         id: init
-        run: terraform init -backend-config="bucket=$BUCKET_TF_STATE"
+        run: terraform init -backend-config="bucket=${{ env.BUCKET_TF_STATE }}"
 
       - name: Terraform format
         id: format
